Added static-analysis workflow

--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -30,6 +30,9 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-php-
 
+      - name: Install Composer dependencies
+        run: composer install
+
       - name: Set up the database
         run: |
           cp .env.example .env
